# frequency_detector_wise_lab

./: README.md  west-manifest.yml
esp32/adc_embed/: CMakeLists.txt  adc.wit  prj.conf
esp32/adc_embed/boards/: esp32c6_devkitc.overlay
esp32/adc_embed/src/: main.c  shim.h
esp32/adc_embed/wasm_component/: adc.component.wasm  adc.rr.cwasm  adc.wasm  adc_embed.wasm
esp32/adc_pulley_embed/: CMakeLists.txt  prj.conf  script.sh
esp32/adc_pulley_embed/boards/: esp32c6_devkitc.overlay
esp32/adc_pulley_embed/fifo_proc/: compare.py  read_fifo.py  udp_recv.py  write_fifo.py
esp32/adc_pulley_embed/src/: main.c
esp32/adc_pulley_embed/wasmtime-rr-prototyping/: Cargo.toml
esp32/adc_pulley_embed/wasmtime-rr-prototyping/.github/workflows/: main.yml
esp32/adc_pulley_embed/wasmtime-rr-prototyping/adc_embed_nostd/src/: bridge.c  lib.rs
esp32/adc_pulley_embed/wasmtime-rr-prototyping/pulley_exp_wasmtime_with_std/: Cargo.toml
esp32/adc_pulley_embed/wasmtime-rr-prototyping/pulley_exp_wasmtime_with_std/src/: main.rs
esp32/adc_pulley_embed/wasmtime-rr-prototyping/qemu_rust_uart/_target/riscv32imac-unknown-none-elf/debug/: qemu_rust_uart  qemu_rust_uart.d
esp32/adc_pulley_embed/wasmtime-rr-prototyping/qemu_rust_uart/_target/riscv32imac-unknown-none-elf/debug/.fingerprint/qemu_rust_uart-a94b5e1b4e4e6b59/: bin-qemu_rust_uart  output-bin-qemu_rust_uart
rpi/freq_detect_test/src/: main
rpi/freq_detect_wasm/freq_detect_pulley_embed/wasmtime-rr-prototyping/qemu_rust_uart/_target/: .rustc_info.json
rpi/freq_detect_wasm/freq_detect_pulley_embed/wasmtime-rr-prototyping/qemu_rust_uart/_target/riscv32imac-unknown-none-elf/debug/.fingerprint/qemu_rust_uart-a94b5e1b4e4e6b59/: bin-qemu_rust_uart.json
